--- a/translations/en.json
+++ b/translations/en.json
@@ -1,6 +1,6 @@
 {
     "translation": {
         "welcome": "Welcome to:",
-        "appName": "OVRPWRD"
+        "appName": "OVRPWRD.app"
     }
 }
