--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">OVRPWRD</string>
+    <string name="server_client_id">1071597093913-v4p1bjkmkq1re6vr4o4f601io8lc2l26.apps.googleusercontent.com</string>
 </resources>
