--- a/translations/en.json
+++ b/translations/en.json
@@ -4,6 +4,14 @@
         "appName": "OVRPWRD.app",
         "singUp.text": "You can sign up with",
         "registration.details.heading": "Fill in your details",
-        "nextStep.button": "Next step"
+        "nextStep.button": "Next step",
+        "dob.header": "Date of birth",
+        "button.select": "Select",
+        "genderAtBirth.header": "Gender at birth",
+        "gender.male": "Male",
+        "gender.female": "Female",
+        "gender.preferNotToSay": "Prefer not to say",
+        "avatar.pick.heading": "Choose your avatar",
+        "steam.public.account.information": "Make sure that your steam account privacy is set to 'Public'. This is required to allow us collect your match statistics and use it during point calculation process."
     }
 }
