--- a/translations/en.json
+++ b/translations/en.json
@@ -13,8 +13,8 @@
         "gender.preferNotToSay": "Prefer not to say",
         "avatar.pick.heading": "Choose your avatar",
         "steam.public.account.information": "Make sure that your steam account privacy is set to 'Public'. This is required to allow us collect your match statistics and use it during point calculation process.",
-        "premium.banner.header": "Power-up with premium",
-        "premium.banner.description": "Learn how to get more points and level up with the best players of the month. It's all in your hands",
+        "premium.banner.header": "Power-up \nWith premium",
+        "premium.banner.description": "Boost your relics and access premium prizes",
         "dailyStats.noGame.card.text": "We will start counting from the match with the following 'Game ID': "
     }
 }
